--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -12,6 +12,11 @@ $spacing-medium: 2.4rem;
 $spacing-small: 2rem;
 $spacing-xsmall:1rem;
 
+// FONT FAMILY
+$font-principal:font-family'Kanit', sans-serif;
+$font-secundaria:font-family'Dancing Script', cursive;
+
+
 // TAMAÑO DE FUENTES
 
 $text-large: 5.2em;
