--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,18 +1,6 @@
-/* Variables */
-@import "./components/variables.scss";
-
-/* Normalizador */ 
-@import "./components/normalize";
-
-/* Mixins */ 
-@import "./components/mixins";
-
-/* Header */ 
-@import "./base/header";
-
-/* Body */ 
-@import "./base/body";
-
-/* Footer */ 
-@import "./base/footer";
+@import "./components/variables";
+.p{
+    color: $alternative;
+    font-family: $font-secundaria;
+}
 
