--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,177 @@
-.body-index{
-    background-image: url(./Imagenes/background.jpg);
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-}
+button {
+    padding: 1.3em 3em;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+  
+  button:hover {
+    background-color: #23c483;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
+  }
+  
+  button:active {
+    transform: translateY(-1px);
+  }
+
+  a{
+    text-decoration: none;
+  }
+
+  .icon-btn {
+    width: 50px;
+    height: 50px;
+    border: 1px solid #cdcdcd;
+    background: white;
+    border-radius: 25px;
+    overflow: hidden;
+    position: relative;
+    transition: width 0.2s ease-in-out;
+    font-weight: 500;
+    font-family: inherit;
+  }
+  
+  .add-btn:hover {
+    width: 120px;
+  }
+  
+  .add-btn::before,
+  .add-btn::after {
+    transition: width 0.2s ease-in-out, border-radius 0.2s ease-in-out;
+    content: "";
+    position: absolute;
+    height: 4px;
+    width: 10px;
+    top: calc(50% - 2px);
+    background: seagreen;
+  }
+  
+  .add-btn::after {
+    right: 14px;
+    overflow: hidden;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+  }
+  
+  .add-btn::before {
+    left: 14px;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+  }
+  
+  .icon-btn:focus {
+    outline: none;
+  }
+  
+  button {
+    transform: rotate(-25deg) skew(25deg);
+    transform-style: preserve-3d;
+    position: relative;
+    list-style: none;
+    width: 100px;
+    height: 32px;
+    border: none;
+    background: transparent;
+    font-family: inherit;
+   }
+   
+   button:before {
+    content: '';
+    position: absolute;
+    bottom: -10px;
+    left: -5px;
+    width: 100%;
+    height: 10px;
+    background: #2a2a2a;
+    transform: skewX(-41deg);
+   }
+   
+   button:after {
+    content: '';
+    position: absolute;
+    top: 5px;
+    left: -9px;
+    width: 9px;
+    height: 100%;
+    background: #2a2a2a;
+    transform: skewY(-49deg);
+   }
+   
+   button span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #2a2a2a;
+    color: #fff;
+    font-size: 25px;
+    transition: 1.1s ease-out;
+   }
+   
+   button:hover span {
+    z-index: 1000;
+    transition: .3s;
+    color: #fff;
+   }
+   
+   button:hover span:nth-child(5) {
+    transform: translate(40px, -40px);
+    opacity: 1;
+   }
+   
+   button:hover span:nth-child(4) {
+    transform: translate(30px, -30px);
+    opacity: .8;
+   }
+   
+   button:hover span:nth-child(3) {
+    transform: translate(20px, -20px);
+    opacity: .6;
+   }
+   
+   button:hover span:nth-child(2) {
+    transform: translate(10px, -10px);
+    opacity: .4;
+   }
+   
+   button:hover span:nth-child(1) {
+    transform: translate(0px, 0px);
+    opacity: .2;
+   }
+   
+   button:active span:nth-child(5) {
+    transform: translate(20px, -20px);
+    opacity: 1;
+   }
+   
+   button:active span:nth-child(4) {
+    transform: translate(15px, -15px);
+   }
+   
+   button:active span:nth-child(3) {
+    transform: translate(10px, -10px);
+   }
+   
+   button:active span:nth-child(2) {
+    transform: translate(5px, -5px);
+   }
+   
+   button:active span:nth-child(1) {
+    transform: translate(0px, 0px);
+   }
+   
+   button:nth-child(1):hover span {
+    background: #52E19F;
+   }
