--- a/scss/base/_header.scss
+++ b/scss/base/_header.scss
@@ -1,6 +1,3 @@
-header{
-    @include flex (row, space-around, center);
-    padding: $spacing-small;
-    border-bottom: 2px solid $alternative;
-    margin-top: 20px;
+h1{
+    color: blue;
 }
