--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -1,24 +1,19 @@
-// COLORES
-
+/*VARIABLES*/
 $primary: #FC4545 ;
-$secondary: #FFE829;
+$secondary: #F9C902;
 $alternative: #7D2FFD ;
 $text-color: #FFF7E5;
+$negro: #7E7D7C;
 
-// ESPACIADOS
 
+/*ESPACIADOS*/
 $spacing-large: 6rem;
 $spacing-medium: 2.4rem;
 $spacing-small: 2rem;
 $spacing-xsmall:1rem;
 
-// FONT FAMILY
-$font-principal:font-family'Kanit', sans-serif;
-$font-secundaria:font-family'Dancing Script', cursive;
 
-
-// TAMAÑO DE FUENTES
-
+/*TAMAÑO DE FUENTE*/
 $text-large: 5.2em;
 $text-medium: 2.2em;
 $text-base: 1.6em;
